overlays/totem-iohk-mn/resources/gc-totem-ms/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: gc-totem-ms
  name: gc-totem-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gc-totem-ms
  template:
    metadata:
      labels:
        io.kompose.service: gc-totem-ms
    spec:
      containers:
      - name: gc-totem-ms-api
        image: gimbalabs/gc-totem-microservice:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6001
        resources: {}
        volumeMounts:
        - mountPath: /node-ipc
          name: node-ipc
        - name: gc-totem-ms-priv
          mountPath: /src/priv
      - name: socat-socket-server
        image: alpine/socat
        command: ["sh", "-c", "rm -f /ipc/node.socket; socat UNIX-LISTEN:/ipc/node.socket,fork TCP:${CARDANO_NODE_SOCKET_TCP_HOST}:${CARDANO_NODE_SOCKET_TCP_PORT},ignoreeof"]
        volumeMounts:
        - mountPath: /ipc
          name: node-ipc
      - name: gc-totem-ms-www
        image: nginx
        volumeMounts:
        - name: www-front
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: node-ipc
        emptyDir: {}
      - name: www-front
        emptyDir: {}
      - name: gc-totem-ms-priv
        persistentVolumeClaim:
          claimName: gc-totem-ms-priv
      - name: gc-totem-ms-configmap
        configMap:
          name: gc-totem-ms-configmap
