overlays/totem-iohk-mn/resources/gc-totem-ms/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: gc-totem-ms
  name: gc-totem-ms-www
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: gc-totem-ms
status:
  loadBalancer: {}
